Spanish profile version.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -67,6 +67,7 @@
         $(document).ready(function() {
 
             changePageLanguage();
+            changeBaseLanguage();
 
             $("#us-flag-icon").click(function() {
                 sessionStorage.setItem("weblang", "en_us");
