--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -6,26 +6,7 @@
 {% endblock %}
 
 {% block body %}
-{% from "_formhelpers.html" import render_field %}
-
-<!-- <h1>User Name</h1>
-
-<h2>Update password</h2>
-<form action="{{ url_for('update_password') }}" method="POST">
-    {{ update_pw_form.hidden_tag() }}
-    {{render_field(update_pw_form.new_password)}}
-    {{render_field(update_pw_form.password)}}
-    {{render_field(update_pw_form.confirm)}}
-    <input type="submit" value="Submit" />
-</form>
-
-<h2>Delete account</h2>
-<form action="{{ url_for('delete_account') }}", method="POST">
-    {{ delete_form.hidden_tag() }}
-    {{render_field(delete_form.password)}}
-    {{render_field(delete_form.confirm)}}
-    <input type="submit" value="Submit" />
-</form> -->
+{% from "_formhelpers.html" import render_error, resolve_form_collapse %}
 
 <div id="profile-main-div" class="flex-viewport-div">
     <div id="profile-options-container">
@@ -33,15 +14,17 @@
         <h2 style="color:rgb(71, 74, 76); margin-bottom: 1em;">Waffle</h2>
         <div class="accordion" id="profile-options">
             <div class="card">
-                <div id="profile-changepassword" data-toggle="collapse" data-target="#change-pass-collapse" aria-expanded="true" aria-controls="change-pass-collapse" class="accordion-card-label-div">
+                <div id="profile-changepassword" data-toggle="collapse" data-target="#change-pass-collapse" class="accordion-card-label-div">
                     Change Password
                 </div>
-                <div id="change-pass-collapse" class="collapse" aria-labelledby="headingOne" data-parent="#profile-options">
+                <div id="change-pass-collapse" class="{{resolve_form_collapse('updatepw')}}" aria-labelledby="headingOne" data-parent="#profile-options">
                     <div class="card-body">
                         <form action="{{ url_for('update_password') }}" method="POST" class="login-signup-form">
                             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
                             <input id="profile-cpnewpassword" type="password" name="new_password" class="profile-options-input" placeholder="New password"/>
+                            {{render_error('updatepw_new_password')}}
                             <input id="profile-cpoldpassword" type="password" name="password" class="profile-options-input" placeholder="Old password"/>
+                            {{render_error('updatepw_password')}}
                             <input id="profile-cprepoldpassword" type="password" name="confirm" class="profile-options-input" placeholder="Repeat old password"/>
                             <input id="profile-cpsubmit" type="submit" class="profile-options-input" value="Change password"/>
                         </form>
